RESOLVED FIXED83144
[Qt] Unable to zoom to some areas.
https://bugs.webkit.org/show_bug.cgi?id=83144
Summary [Qt] Unable to zoom to some areas.
Allan Sandfeld Jensen
Reported 2012-04-04 04:32:37 PDT
In some cases double clicking to zoom will fail to zoom to the containing area, even if the targeted area is larger than the touch area and fully contains it (an optimal case).
Attachments
Patch (1.58 KB, patch)
2012-04-04 04:35 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2012-04-04 04:35:02 PDT
WebKit Review Bot
Comment 2 2012-04-04 05:01:30 PDT
Comment on attachment 135556 [details] Patch Clearing flags on attachment: 135556 Committed r113170: <http://trac.webkit.org/changeset/113170>
WebKit Review Bot
Comment 3 2012-04-04 05:01:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.