[Qt] Unable to zoom to some areas. https://bugs.webkit.org/show_bug.cgi?id=83144

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-04-04
Reviewed by Kenneth Rohde Christiansen.

Remember to convert touch-area to touch-point radius.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::findZoomableAreaForPoint):

Canonical link: https://commits.webkit.org/100512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113170 268f45cc-cd09-0410-ab3c-d52691b4dbfc